@@ -1,3 +1,7 @@
+2013-05-20  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* Fish.cc: disconnect in more cases on Close.
+
 2013-05-13  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* TorrentTracker.cc, TorrentTracker.h: use xstring for InfoHash and
